tdf#118528 sw layout: only direct formatting for EmulateTableKeep

Emulating MSWord's way of keeping a table with the next paragraph
has caused a few complaints, but never anything that seemed
to clearly indicate a real problem - usually just badly designed
documents. But a common theme has been the keep attribute coming
through styles. Since our export-emulation writes directly
to the paragraph properties, lets make the emulation dependent
on direct formatting to avoid some of these complaints.

Reviewed-on: https://gerrit.libreoffice.org/57613
Tested-by: Jenkins
Reviewed-by: Justin Luth <justin_luth@sil.org>
(cherry picked from commit ef86b2e7a08ea25c434db85087d094f030f762cc)
Reviewed-on: https://gerrit.libreoffice.org/57697
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>

Change-Id: I008fc7b6a7083292463c20972ad209761ec97601